[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hydroravens"]

[project]
name = "hydroRaVENS"
dynamic = ["version"]
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "pyyaml",
  "scipy",
]
requires-python = ">=3.9"
authors = [
  { name="Andrew D. Wickert", email="awickert@umn.edu" },
]
description = "Rain and Variable Evapotranspiration, Nieve, and Streamflow"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
keywords = [
  "hydrology",
  "linear reservoir",
  "rainfall-runoff",
  "snow",
  "streamflow",
  "discharge",
  "water balance",
  "evapotranspiration",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
]

[project.optional-dependencies]
docs = [
  "sphinx>=4.0",
  "sphinx-rtd-theme>=1.0",
]

[tool.setuptools.dynamic]
version = {attr = "hydroravens._version.__version__"}

[project.scripts]
hydroravens = "hydroravens.cli:run"

[project.urls]
Homepage = "https://csdms.colorado.edu/wiki/Model:HydroRaVENS"
Repository = "https://github.com/MNiMORPH/hydroRaVENS"
Documentation = "https://hydroravens.readthedocs.io/"
Issues = "https://github.com/MNiMORPH/hydroRaVENS/issues"
